# data_streaming_kafka

./: docker-compose.yml  kafka_stream_dag.py  pyproject.toml  spark_processing.py
dags/: kafka_streaming_service.py
