[tool.poetry]
name = "data-streaming-kafka"
version = "0.1.0"
description = "Data streaming using Kafka and Airflow"
authors = ["Alecsander Guimaraes <leelecko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
