[tool.poetry]
name = "data-streaming-kafka"
version = "0.1.0"
description = "Data streaming using Kafka and Airflow"
authors = ["Alecsander Guimaraes <leelecko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
confluent-kafka = "^2.3.0"
pyspark = "^3.5.0"
json5 = "^0.9.14"
types-requests = "^2.31.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
